--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dev = [
     "astropy>=7.1.0",
     "cappa>=0.28.0",
     "pytest>=8.4.1",
+    "pytest-asyncio>=0.25.0",
+    "pytest-cov>=6.0.0",
     "ruff>=0.12.2",
     "streamlit>=1.46.1",
     "ty>=0.0.1a14",
@@ -68,3 +70,4 @@ exclude = [
 testpaths = [
     "tests",
 ]
+asyncio_mode = "auto"
